feat: add payment

--- a/src/components/CartDrawer/CartDrawerItem/CartDrawerItems.module.scss
+++ b/src/components/CartDrawer/CartDrawerItem/CartDrawerItems.module.scss
@@ -1,5 +1,5 @@
 .cartItem {
-    @apply flex gap-2 items-center border-b border-gray-400 w-[500px] max-md:w-[341] h-[140px];
+    @apply flex gap-2 items-center border-b border-gray-400  h-[140px];
 
 
     button {
