--- a/src/components/CartSum/CartSum.module.scss
+++ b/src/components/CartSum/CartSum.module.scss
@@ -1,8 +1,10 @@
 .cartSum {
-  @apply w-[536px] flex flex-col items-center border border-gray-400 rounded-xl justify-center max-md:w-[341px] h-[656px] mb-4;
+  @apply sm:w-[536px] w-[300px] flex flex-col items-center border border-gray-400 rounded-xl justify-center sm:h-[600px] h-[550px] ;
 
   .cartLink {
-    @apply w-[408px] h-[56px] flex justify-center items-center bg-black text-white cursor-pointer mt-10 max-md:w-[309px];
+    button {
+      @apply sm:w-[309px] w-[250px] h-[56px] rounded-lg flex justify-center items-center bg-black text-white cursor-pointer mt-10 ;
+    }
   }
 
   .cartTitle {
@@ -14,29 +16,19 @@
   }
 
   .cartInput {
-    @apply flex flex-col my-6 max-md:w-[309px];
+    @apply flex flex-col items-center my-6 max-md:w-[309px];
 
     label {
       @apply text-sm mb-2 max-md:text-sm;
     }
 
     input {
-      @apply border-[0.5px] border-gray-400 rounded-lg py-4 pl-4 w-[408px] h-[56px] max-md:w-[309px];
+      @apply border-[0.5px] border-gray-400 rounded-lg py-4 pl-4 sm:w-[309px] w-[250px] h-[56px] ;
     }
-
-    .cartInputContainer {
-      @apply relative;
-
-      button {
-        @apply absolute right-[20px] top-[10px] border border-black rounded-[10px] p-2 w-[78px] text-xs;
-      }
-    }
-
-
   }
 
   .cartSummary {
-    @apply w-[408px] h-[168px] flex flex-col justify-between max-md:w-[309px];
+    @apply sm:w-[309px] w-[250px] h-[168px] flex flex-col justify-between;
 
     div {
       @apply flex justify-between;
